[#68385464] User can see the input form and the shorten button on the home page
Signed-off-by: Evan Tedesco <evantedesco@gmail.com>

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,15 @@
 <html>
-<body>
-
-
-</body>
-
+  <head>
+    <link href="css/style.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <form action="/" method="post">
+      <input class="textbox" type="text" name="shorten_url" placeholder="Enter the URL you would like to shorten">
+      <input class="button" type="submit" value="Shorten">
+    </form>
+  </body>
 </html>
+
+
+
+
