--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,3 +20,18 @@ form {
     width: 250px;
     padding: 5px;
 }
+
+.display_div {
+    margin: auto;
+    margin-top: 15%;
+    max-width: 500px;
+    text-align: left;
+}
+
+td {
+    padding: 15px;
+}
+
+.bold {
+    font-weight: bold;
+}
