[#68385480] Displays the number of visits via URL shortener.
Signed-off-by: Evan Tedesco <evantedesco@gmail.com>

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ body {
 .display_div {
     margin: auto;
     margin-top: 15%;
-    max-width: 500px;
+    width: 600px;
     text-align: left;
 }
 
