Allows user to create a vanity URL
Signed-off-by: Evan Tedesco <evantedesco@gmail.com>

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,8 +13,11 @@ body {
 }
 
 .textbox {
-    width: 250px;
+    width: 300px;
     padding: 5px;
+    display: block;
+    margin: 10px auto;
+
 }
 
 .display_div {
