[#68385466] Changed font to be consistent on all pages, removed link from long URL, and redifined route to match mock-ups
Signed-off-by: Evan Tedesco <evantedesco@gmail.com>

--- a/views/items.erb
+++ b/views/items.erb
@@ -8,7 +8,7 @@
     <table>
       <tr>
         <td class="bold">Original URL</td>
-        <td><a href="<%= current[0] %>"><%= current[0] %></a></td>
+        <td><%= current[0] %></td>
       </tr>
       <tr>
         <td class="bold">Shortened URL</td>
