[#68385482] User now sees message telling them the vanity url box is optional
Signed-off-by: Cory Leistikow <cory.leistikow@gmail.com>

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,7 @@
         <%end%>
       <form action="/" method="post">
         <input class="textbox" type="text" name="shorten_url" placeholder="Enter the URL you would like to shorten">
+        <div class="vanity">Optional: Enter a vanity URL: </div>
         <input class="textbox" type="text" name="vanity_url" placeholder="What would you like the shortened URL to be?">
         <input class="button" type="submit" value="Shorten">
       </form>
