--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,9 @@ body {
     font-size: 0.8em;
     width: 400px;
     padding: 5px;
+}
+form {
+    width: 400px;
     display: block;
     margin: 10px auto;
 }
@@ -43,4 +46,12 @@ td {
 .main {
     position: relative;
     margin-top: 22%;
+}
+
+.vanity{
+    text-align:left;
+    color:slategray;
+    font-size: .8em;
+    margin-top:1em;
+    margin-bottom:.3em
 }
