Integrated postgress sequel db into url_repository class

--- a/views/items.erb
+++ b/views/items.erb
@@ -12,7 +12,7 @@
       </tr>
       <tr>
         <td class="bold">Shortened URL</td>
-        <td><a href="<%= site[:redirect] %>"><%= site[:redirect] %></a></td>
+        <td><a href="<%= site[:short_url] %>"><%= site[:short_url] %></a></td>
       </tr>
       <tr>
         <td class="bold">Page visits via shortener:</td>
